# stand-alone-analyzer

./: .env  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: _shared-coding-rules.md  algo-engineer.md  api-developer.md  code-reviewer.md  db-specialist.md  devops-engineer.md  frontend-architect.md  researcher.md
.github/workflows/: alembic-drift.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_v6.py  0002_v7_auth.py  0003_w5a_materials_uploads.py  0004_w10_projects.py  0005_add_scan_status.py  0006_procrastinate_init.py  0007_worker_events.py
app/: streamlit_app.py
deploy/nginx/: stand-alone-analyzer.conf
deploy/scripts/: deploy.sh
deploy/systemd/: saa-api.service
docs/: USER_GUIDE.md  cognito-setup.md  db-ops.md  db-schema-v4.md  db-schema-v5.md  db-schema-v6.md  db-schema-v7.md  handoff-2026-05-28.md  handoff-2026-05-31.md  handoff-2026-06-12.md  project-status.md  sam-iam-grant-howto.md  sam-ops.md
docs/operations/: runbook.md
infra/s3/: README.md  bucket-policy.json  cors.json  iam-policy-dev.json  iam-policy-prod.json  lifecycle.json
scripts/: check_alembic_drift.py  seed_sam_model.py  start-local-stack.sh
scripts/aws/: abs-cap-terminate.sh  iam-policy-phase4-hjang-minimal.json  iam-policy-phase4-hjang.json  sam-bake-ami-provision.sh  sam-bake-ami.sh  sam-budget.sh  sam-build-merged-m3.sh  sam-eventbridge.sh  sam-gpu-bootstrap.sh  sam-gpu-smoketest.py  sam-gpu-worker-userdata.sh  sam-iam-bootstrap.sh  sam-launch-template.sh  sam-stage-lora-to-s3.sh
scripts/db/: wipe-saa-test-pre-w10.sql  wipe-saa-test.sh
scripts/dev/: restart-backend.sh  start-backend.sh  start-frontend.sh  w10-acceptance.sh
scripts/devops/: cognito_bootstrap.sh  cognito_smoke.sh
scripts/s3/: dryrun.sh
scripts/sam/: measure-defer.py  measure-launch.py  measure-poll.py  measure-run.sh
src/flake_analysis/: __init__.py
tests/: test_brushing.py  test_deploy_script.py  test_explorer_mosaic_helpers.py  test_image_preview.py  test_imports.py  test_nginx_config_syntax.py  test_no_streamlit.py  test_pipeline_background.py  test_pipeline_chain.py  test_pipeline_clustering.py  test_pipeline_explorer.py  test_pipeline_selector.py  test_pipeline_thumbnails.py  test_progress_callback_passthrough.py  test_pyproject_clean.py  test_selector_filter_persistence.py  test_state_hashing.py  test_state_manifest.py  test_state_paths.py  test_systemd_unit.py  test_xaccel_thumbnails.py
tests/api/: conftest.py  test_acl_resolve.py  test_admin_routes.py  test_admin_usage_route.py  test_annotation_preview_service.py  test_arrow_writer.py  test_auth_dep_dropin.py  test_auth_dev_bypass.py  test_auth_routes.py  test_auth_routes_usage.py  test_auth_stub.py  test_auth_tokens.py  test_auth_users_upsert.py  test_clustering_errors.py  test_clustering_mutex_sharing.py  test_clustering_schemas.py  test_clustering_service.py  test_compute_schemas.py  test_data_annotation_preview.py  test_data_clustering_assignments.py  test_data_clustering_labels.py  test_data_clustering_seed_groups.py  test_data_domain_stats.py  test_data_explorer_flake_detail.py  test_data_explorer_flakes.py  test_data_explorer_grid.py  test_data_explorer_tile_manifest.py  test_data_manifest.py  test_data_selection.py  test_deps.py  test_error_envelope.py  test_errors.py  test_explorer_schemas.py  test_explorer_service.py  test_get_active_analysis.py  test_gpu_status.py  test_guards.py  test_health.py  test_logging_ctx.py  test_main.py  (+52 more)
tests/core/: test_background_seed.py  test_clustering_auto_opt.py  test_clustering_determinism.py  test_clustering_wrapper.py  test_domain_stats_r7.py  test_imports_pr11.py  test_imports_pr12.py  test_pair_distance_smoke.py  test_pipeline_smoke.py  test_progress_callback.py  test_selector_filter.py  test_thumbnails_internals.py
tests/db/: conftest.py  test_analysis_status_generated.py  test_orm_v7_shape.py  test_project_users.py  test_reconcile.py  test_sample_analysis_factory.py  test_usage_events.py  test_users_v7_columns.py  test_v7_migration_shape.py  test_w10_projects.py  test_w5a_schema.py  test_worker_events.py
tests/e2e/: pipeline.spec.ts  upload.spec.ts
tests/fixtures/: sam_m3_args.json
tests/parity/: README.md  fixture_builder.py  regenerate_golden.py  test_golden_regression.py  test_pipeline_e2e.py  test_reproducibility.py  (+1 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+421 files in other folders)
