[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "stand-alone-analyzer"
version = "0.1.0"
description = "Streamlit app for interactive 2D material flake analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Qpress Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flake-analysis-core>=0.1.0",
    "streamlit>=1.32",
    "plotly>=5.18",
    "pandas>=2.1",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/HoukJangBNL/stand-alone-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["src/flake_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
