[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "stand-alone-analyzer"
version = "0.3.0"
description = "React + FastAPI app for interactive 2D material flake analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Qpress Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14",
    # Absorbed from flake-analysis-core (merged in v0.2.0)
    "numpy>=1.24",
    "Pillow>=10",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "pycocotools>=2.0",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/HoukJangBNL/stand-alone-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["src/flake_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pg: requires a writable PostgreSQL test database (set SAA_TEST_DATABASE_URL); skipped otherwise.",
]
